# calc-projects

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  DataStructures1Tests.py  README.md  build.sh  gitlab-ci.yml  local_tester.sh  local_tester2.sh  main.cmake  run_tests.sh  uncovered_jqrs.md  update
1_SimpleCalc/: CMakeLists.txt  Makefile  README.md  build.sh  simplecalc_passing.c
1_SimpleCalc/include/: math_utils.h
1_SimpleCalc/includes/: math_utils.h
1_SimpleCalc/src/: math_utils.c  simplecalc.c
2_FileCalc/: .clang-format  CMakeLists.txt  Makefile  README.md  build.sh
2_FileCalc/include/: evaluate.h  types.h
2_FileCalc/includes/: evaluate.h  execute.h  file_io.h  math_utils.h  parse.h  process_file.h  types.h
2_FileCalc/src/: .clang-format  README.md  evaluate.c  execute.c  file_io.c  filecalc  filecalc.c  math_utils.c  process_file.c
2_FileCalc/src/input_dir/: 10f10c58904fdbf8.equ  2f0aa37a4426bd7a.equ  36da98fe4a85fc5d.equ  4e5057d72e02752b.equ  52f18b159fb7217f.equ  5ad3dfc0087fe0e0.equ  6793a2d9e977228e.equ  bbec84966bee0fa5.equ  be448d882993fca8.equ  f42ad70d5d8d7de6.equ
3_DataStructures1/: CMakeLists.txt  Makefile  README.md
3_DataStructures1/include/: README.md  hash_table.h  linked_list.h  queue.h  queue_p.h  stack.h
3_DataStructures1/src/: README.md  hash_table  hash_table.c  linked_list  linked_list.c  queue.c  queue_p.c  stack  stack.c
3_DataStructures1/tests/: .queue_p_tests.c.swp  README.md  hash_table_tests.c  linked_list_tests.c  queue_p_tests.c  queue_tests.c  stack_tests.c
4_ThreadCalc/: CMakeLists.txt  Makefile  README.md  savedCMakeLists.txt  workingCMakeLists.txt
4_ThreadCalc/include/: evaluate.h  file_io.h  filejob.h  queue.h  shared_mutex.h  threadpool.h  utils.h
4_ThreadCalc/john/: Makefile  test.c  test_tpool  tpool.c  tpool.h
4_ThreadCalc/src/: README.md  evaluate.c  file_io.c  filejob.c  math_utils.c  process_file.c  queue.c  shared_mutex.c  signals.c  threadcalc.c  threadpool.c  utils.c
4_ThreadCalc/tests_include/: thread_tests.h
4_ThreadCalc/tests_src/: CMakeLists.txt  signal_tests.c  thread_tests.c  thread_tests.cmake  thread_tests_main.c
5_NetCalc/: CMakeCache.txt  CMakeLists.txt  EquFileGen.py  Makefile
5_NetCalc/client/: client.py
5_NetCalc/client/indir/: 23255eff600c824d.equ  362f268d6403f33d.equ  6b3f11f0c3b939e1.equ  922d4bf35bb93b5d.equ  a6ebcf529f7341ae.equ  d88c399dedc568d4.equ
5_NetCalc/client/outdir/: 24470becde730bc1.equ  267026ba47e56efc.equ  2c92a3550380cd2c.equ  3c7a2e345b691275.equ  5dbaf063cdae2968.equ  875734743d032758.equ  9b6f11e53a1c426a.equ  a82051cb8a4f51fb.equ  acedeb690d50b4e2.equ  d7b385ba699c1f1f.equ
5_NetCalc/include/: 0b5c3550774394de.equ  2857d8f74f8fdace.equ  2dc50bc447adebc7.equ  331041dddca712b8.equ  349bf5657a66a26e.equ  3bce56e09342c0b9.equ  53f0527f9056f5f2.equ  65dde1a92931dc60.equ  6cb8f4385767e2c8.equ  9c35894dfd5afc53.equ  bb31a2492598ab56.equ  c1cca214705af17f.equ  c6d05d62142337e8.equ  c7c59b79165159ce.equ  da795ff6e91b8805.equ  f830cb7f41a7d0a3.equ  filejob.h  math_utils.h  pollserver.h  process_file.h  shared_mutex.h  signal_tests.h  signals.h  types.h  utils.h
5_NetCalc/src/: evaluate.c  math_utils.c  netcalc  netcalc.c  pollserver.c  process_file.c  received_data.txt  shared_mutex.c  signals.c
Tests/: EquGrader.py  FileCalcTests.py  NetCalcTests.py  SimpleCalc.tests  SimpleCalcTests.py  ThreadCalcTests.py
docker/: Dockerfile  run-tests.sh
netcalc_tests/unsolved/: 0012a2262ea36d8a.equ  00f8da953aa99664.equ  01423eef12a869e7.equ  017a675e56e3da32.equ  03248e0682b7253f.equ  055ecc83f20fef5d.equ  074f8de3922ca26f.equ  0963b8a5ef417078.equ  0abb121efc70c2d3.equ  0b8f1e8b3c9c6239.equ  0de93234f72127bb.equ  0e804a99b7ca89c3.equ  0ee1b927e3a12fe1.equ  11422c7a34d992da.equ  118dae757d73e237.equ  120e129d62a2d60e.equ  1238384f878bff52.equ  140e6dc6ca081689.equ  141e109421c0e2e6.equ  14239682f1db0282.equ  14ba0f97dc60c352.equ  14dfe47e127232a9.equ  170ce6387da2681b.equ  173a88d271b1d9de.equ  1a642f70ddd65279.equ  1ce5b8981281594d.equ  1e0ff273a62900e3.equ  1e3808165807e390.equ  1e64bed49b362842.equ  1f475e390b4fafb6.equ  1f4ffae28104db08.equ  1fd3254d4fcf1b69.equ  20957254f5dbc134.equ  21b4bde6e85925be.equ  2277f6fd3e20ad31.equ  2385b198a02ac78c.equ  23f5891b03ec349d.equ  269f95a8ae358d01.equ  271ebe5cc0a44fe7.equ  279b205b5fc90920.equ  (+184 more)
